# soroban-tools

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: bindings-ts.yml
cmd/crates/soroban-spec-typescript/src/project_template/src/: invoke.ts
cmd/crates/soroban-spec-typescript/ts-tests/: contract-token-hash.txt  package-lock.json  package.json
cmd/crates/soroban-spec-typescript/ts-tests/src/: test-custom-types.ts  test-hello-world.ts  test-methods-as-args.ts  test-token.ts  util.ts
cmd/crates/soroban-test/: Cargo.toml
cmd/crates/soroban-test/src/: lib.rs
cmd/crates/soroban-test/tests/fixtures/test-wasms/custom_type/src/: lib.rs
cmd/crates/soroban-test/tests/fixtures/test-wasms/hello_world/src/: lib.rs
cmd/crates/soroban-test/tests/fixtures/test-wasms/swap/: Cargo.toml
cmd/crates/soroban-test/tests/fixtures/test-wasms/token/: Cargo.toml
cmd/crates/soroban-test/tests/it/: invoke_sandbox.rs  main.rs
cmd/soroban-cli/: Cargo.toml
cmd/soroban-cli/src/: context.rs  lib.rs  strval.rs  utils.rs
cmd/soroban-cli/src/commands/: mod.rs
cmd/soroban-cli/src/commands/config/: locator.rs
cmd/soroban-cli/src/commands/contract/: invoke.rs  mod.rs
cmd/soroban-cli/src/rpc/: mod.rs  transaction.rs
cmd/soroban-rpc/internal/test/: simulate_transaction_test.go
cmd/soroban-rpc/lib/preflight/src/: lib.rs
cmd/strval/: Cargo.toml
cmd/strval/src/: lib.rs  strval.rs  utils.rs
cmd/strval/tests/it/: arg_parsing.rs  main.rs
docs/: soroban-cli-full-docs.md
