[package]
name = "strval"
description = "Soroban CLI"
homepage = "https://github.com/stellar/soroban-cli"
repository = "https://github.com/stellar/soroban-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.4.0"
edition = "2021"
rust-version = "1.66"
autobins = false


[dependencies]
soroban-env-host = { workspace = true, features = ["vm", "serde", "hostfn_log_fmt_values"] }
stellar-strkey = { workspace = true }
soroban-spec = { workspace = true }
base64 = "0.13.0"
thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
hex = "0.4.3"
num-bigint = "0.4"
wasmparser = "0.90.0"
sha2 = "0.10.6"
csv = "1.1.6"
ed25519-dalek = "1.0.1"

[build-dependencies]
crate-git-revision = "0.0.4"

[dev_dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
